Fixed the Album not showing bug

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -169,7 +169,7 @@ h4 a{
 .col-25
 {
   float: left;
-  width: 25%;
+  width: 20%;
   margin-right: 20px;
 }
 .col-25 h1{
@@ -182,7 +182,7 @@ ul.col-25{
 
 .col-75{
   float: left;
-  width: 75%;
+  width: 80%;
   margin-left: 15px;
 }
 
